--- a/index.html
+++ b/index.html
@@ -4,23 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Zomato</title>
+    <title>Zomato - Homepage</title>
  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-
-
-    <!-- font awesome cdn for font icons link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googlepis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googlepis.com/css2?"
         family="Poppins:wight@100;200;300;400;500;600;700;800;900&display=swap" rel="stilesheet" />
-    <!-- custom External css file link -->
-    <!-- jquery cdn link -->
+  
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/typed.js@2.0,12"></script>
-    <!-- custom js file link -->
+
 <style>
     * {
     padding: 0;
@@ -352,7 +348,7 @@ hr {
         <div class="heading4">
             <h3>support please tap here</h3>
         </div>
-        <button type="btn">Order now</button>
+       <button type="btn"><a href="home.html" target="_blank"> Order now </a></button>
         <hr>
         <div class="heading5">
             <h1>zomato</h1>
